agregar opciones al usuario perdido

--- a/LimeSurvey/themes/survey/vanilla/views/layout_survey_list.twig
+++ b/LimeSurvey/themes/survey/vanilla/views/layout_survey_list.twig
@@ -135,7 +135,12 @@
                             <div class='{{ aSurveyInfo.class.surveylistrowdivadiv }} h3' {{ aSurveyInfo.attr.surveylistrowdivadiv }}>
                                 {{ gT("Acceso Restringido!") }}
                             </div>
-                            <p>Tal vez quiera <a href="admin">ir a la administraci&oacute;n?</a></p>
+                            <p>
+                            <h4>Tal vez quieras:</h4>
+                            <a href="../">ir a Contestar la encuesta</a><br/>
+                            <a href="admin">ir a la administraci&oacute;n de la encuesta</a><br/>
+                            <a href="../">ir a la administraci&oacute;n de alumnos, materias y profesores</a><br/>
+                            </p>
                         </div>
 
                         <div class="{{ aSurveyInfo.class.surveylistrowdivb }} col-xs-12" {{ aSurveyInfo.attr.surveylistrowdivb }}>
