--- a/LimeSurvey/themes/survey/vanilla/views/layout_survey_list.twig
+++ b/LimeSurvey/themes/survey/vanilla/views/layout_survey_list.twig
@@ -138,7 +138,7 @@
                             <p>
                             <h4>Tal vez quieras:</h4>
                             <a href="../"><button class="btn btn-success">Ir a contestar la encuesta</button></a><br/><br/>
-                            <a href="../index.php/admin"><button class="btn btn-success">Ir a la administraci&oacute;n de la encuesta</button></a><br/><br/>
+                            <a href="../limesurvey/index.php/admin"><button class="btn btn-success">Ir a la administraci&oacute;n de la encuesta</button></a><br/><br/>
                             <a href="../"><button class="btn btn-success">Ir a la administraci&oacute;n de alumnos, materias y profesores</button></a><br/>
                             </p>
                         </div>
