--- a/LimeSurvey/themes/survey/vanilla/views/subviews/navigation/clearall_buttons.twig
+++ b/LimeSurvey/themes/survey/vanilla/views/subviews/navigation/clearall_buttons.twig
@@ -6,7 +6,7 @@
 
 <div class="{{ aSurveyInfo.class.clearallwrapper }} form-inline">
     <label class="form-group {{ aSurveyInfo.class.clearalllabel }}">
-        <input {{ aSurveyInfo.attr.clearallconfirm }} class="{{ aSurveyInfo.class.clearallconfirm }}"><span class="control-label">{{gT("Please confirm you want to clear your response?")}}</span>
+        <input {{ aSurveyInfo.attr.clearallconfirm }} class="{{ aSurveyInfo.class.clearallconfirm }}"><span class="control-label">{{gT("Realmente desea salir de la encuesta?")}}</span>
     </label>
-    <button {{ aSurveyInfo.attr.clearallbutton }} class="{{ aSurveyInfo.class.clearallbutton }} btn btn-link" title="{{ gT('This action need confirmation.') }}">{{gT("Exit and clear survey")}}</button>
+    <button {{ aSurveyInfo.attr.clearallbutton }} class="{{ aSurveyInfo.class.clearallbutton }} btn btn-link" title="{{ gT('This action need confirmation.') }}">{{gT("Salir y limpiar campos")}}</button>
 </div>
