--- a/LimeSurvey/themes/survey/vanilla/views/subviews/navigation/clearall_links.twig
+++ b/LimeSurvey/themes/survey/vanilla/views/subviews/navigation/clearall_links.twig
@@ -15,11 +15,13 @@
 #}
 
 {# It must not be shown once survey is completed #}
+{#
 {% if aSurveyInfo.bShowClearAll == true  %}
     <!-- Exit and clear survey -->
     <li class="{{ aSurveyInfo.class.clearalllinks }}" {{ aSurveyInfo.attr.clearalllinks }}>
-        <a href="#" data-limesurvey-submit='{ "clearall":"clearall" }'  data-confirmedby='{ "confirm-clearall":"confirm" }' data-confirmlabel='{{gT("Please confirm you want to clear your response?" )}}' class='{{ aSurveyInfo.class.clearalllink }} animate' {{ aSurveyInfo.attr.clearalllink }}>
-            {{gT("Exit and clear survey" )}}
+        <a href="#" data-limesurvey-submit='{ "clearall":"clearall" }'  data-confirmedby='{ "confirm-clearall":"confirm" }' data-confirmlabel='{{gT("Realmente desea salir de la encuesta?" )}}' class='{{ aSurveyInfo.class.clearalllink }} animate' {{ aSurveyInfo.attr.clearalllink }}>
+            {{gT("Salir y limpiar campos" )}}
         </a>
     </li>
 {% endif %}
+#}
