--- a/LimeSurvey/themes/survey/vanilla/views/subviews/navigation/language_changer_top_menu.twig
+++ b/LimeSurvey/themes/survey/vanilla/views/subviews/navigation/language_changer_top_menu.twig
@@ -22,23 +22,22 @@
     The language change is done via javascript
 #}
 
-{# There is many condition where the language changer should not be shown. Eg: there is only one language available #}
-{% if  aSurveyInfo.alanguageChanger.show == false %}
 
-    {#  we set a shortcut for aSurveyInfo.alanguageChangerDatas #}
+{# There is many condition where the language changer should not be shown. Eg: there is only one language available #}
+{# {% if  aSurveyInfo.alanguageChanger.show == false %} #}
+
+{#
     {% set aLCD  = aSurveyInfo.alanguageChanger.datas %}
 
     <!-- Language Changer, top menu version -->
     <li class="{{ aSurveyInfo.class.lctli }} dropdown" {{ aSurveyInfo.attr.lctli }} >
         <a class="{{ aSurveyInfo.class.lctla }} dropdown-toggle animate" {{ aSurveyInfo.attr.lctla }} >
 
-            {# NOTE:  {{gT( aLCD.aListLang[aLCD.sSelected] )}}: retreives the language name of the selected language and translates it #}
             {{ gT("Language:") }} {{ aLCD.aListLang[aLCD.sSelected] }}
             <span class="{{ aSurveyInfo.class.lctspan }} caret" {{ aSurveyInfo.attr.lctspan }} ></span>
         </a>
 
         <ul class="{{ aSurveyInfo.class.lctdropdown }} dropdown-menu" id="{{ aSurveyInfo.id.lctdropdown }}" {{ aSurveyInfo.attr.lctdropdown }} >
-            {# List of available languages.  #}
             {% for value, lang in aLCD.aListLang %}
                 <li class="{{ aSurveyInfo.class.lctdropdownli }}" {{ aSurveyInfo.attr.lctdropdownli }}>
                     <a href='#' data-limesurvey-lang='{{ value }}' class="{{ aSurveyInfo.class.lctdropdownlia }} animate" {{ aSurveyInfo.attr.lctdropdownlia }}>
@@ -53,3 +52,4 @@
 
 {{ registerScript("BasicThemeScripts-TopLanguageChanger", "basicThemeScripts.initTopMenuLanguageChanger('." ~ aSurveyInfo.class.lctdropdownlia ~ "', 'form#limesurvey'); ", "POS_POSTSCRIPT") }}
 
+#}
