--- a/css/main.css
+++ b/css/main.css
@@ -4,33 +4,43 @@ body
 	padding: 0;
 	color: #555;
 	font: normal 10pt Arial, Helvetica, sans-serif;
-	background: #EFEFEF;
+	background: #fff;
 }
 
-#page
-{
-	margin-top: 5px;
-	margin-bottom: 5px;
-	background: white;
-	border: 1px solid #C9E0ED;
+.site-wrap {
+	width: 95vw;
+	margin: 0 auto;
 }
 
-#header
-{
-	background-image: url('../themes/images/blurred-background-close-up-coffee-cup-908284.jpg');
-	background-position: center;
-	background-size: cover;
-	min-height: 30vh;
-	margin: 0;
-	padding: 0;
-	opacity: 0.95;
-    filter: alpha(opacity=95); /* For IE8 and earlier */
-	/* border-top: 3px solid #C9E0ED; */
+#header {
+	height: 30vh;
+	background: url('../themes/images/blurred-background-close-up-coffee-cup-908284.jpg') no-repeat center / cover;
+	border-bottom: 1px solid #C9E0ED;
+	opacity: 0.85;
+	transition: opacity .2s;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-around;
+	align-items: flex-start;
+    text-align: center;
+    font-size: 3rem;
+}
+
+#header > img,
+#header > div {
+	padding-left: 30px;
+}
+
+#header > img {
+	max-height: 100px;
+}
+
+#header > div {
+	color: #000;
 }
 
 #header:hover {
-    opacity: 1.0;
-    filter: alpha(opacity=100); /* For IE8 and earlier */
+	opacity: 1;
 }
 
 #content
@@ -39,6 +49,10 @@ body
 }
 
 #content h1 {
+	text-align: center;
+}
+
+form#change-password-form {
 	text-align: center;
 }
 
@@ -67,63 +81,6 @@ body
 	text-align: center;
 	border-top: 1px solid #C9E0ED;
 }
-
-#logo
-{
-	padding: 10px 20px;
-	font-size: 200%;
-	display: flex;
-	opacity: 0.85;
-    filter: alpha(opacity=85); /* For IE8 and earlier */
-}
-
-#logo > span {
-	align-self: center;
-	text-align: center;
-	margin-left: 10px;
-	color: #000000;
-	font-style: italic;
-	font-weight: 550;
-}
-
-#logo > img {
-	margin: 10px;
-}
-
-/*
-#mainmenu
-{
-	background:white url(bg.gif) repeat-x left top;
-}
-
-#mainmenu ul
-{
-	padding:6px 20px 5px 20px;
-	margin:0px;
-}
-
-#mainmenu ul li
-{
-	display: inline;
-}
-
-#mainmenu ul li a
-{
-	color:#ffffff;
-	background-color:transparent;
-	font-size:12px;
-	font-weight:bold;
-	text-decoration:none;
-	padding:5px 8px;
-}
-
-#mainmenu ul li a:hover, #mainmenu ul li.active a
-{
-	color: #6399cd;
-	background-color:#EFF4FA;
-	text-decoration:none;
-}
-*/
 
 div.flash-error, div.flash-notice, div.flash-success
 {
@@ -276,5 +233,28 @@ div.search-form
 @media (max-width: 620px) {
 	#content h1 {
 		font-size: 2.2em;
+	}
+}
+
+@media (max-width: 570px) {
+	#header {
+		align-items: center;
+	}
+	
+	#header > img,
+	#header > div {
+		padding: 0;
+	}
+}
+
+@media (max-height: 450px) {
+	#header > img {
+		justify-self: center;
+		align-self: center;
+		max-height: 60px;
+	}
+
+	#header > div {
+		display: none;
 	}
 }
