--- a/LimeSurvey/themes/survey/vanilla/views/subviews/navigation/save_links.twig
+++ b/LimeSurvey/themes/survey/vanilla/views/subviews/navigation/save_links.twig
@@ -30,7 +30,7 @@
     <!-- Resume later button -->
     <li class="{{ aSurveyInfo.class.savelinksli }}" {{ aSurveyInfo.attr.savelinksli }}>
         <a href="#" data-limesurvey-submit='{ "saveall":"saveall" }' class='{{ aSurveyInfo.class.savelinkslia }} animate'>
-            {{ gT('Resume later') }}
+            {{ gT('Continuar luego') }}
         </a>
     </li>
 {% endif %}
